# engra

./: .gitignore  BACKLOG.md  CLAUDE.md  GUIDANCE.md  README.md  engra_improvement_suggestions.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/engra/: commands.py  config.py  log.py  main.py  mcp_server.py  readers.py  storage.py
src/engram/: commands.py  config.py  log.py  main.py  storage.py
tests/: conftest.py  test_engra.py  test_engram.py  test_eval_metrics.py  test_hybrid.py  test_mcp.py
tests/eval/: README.md  golden.jsonl  run_eval.py
