[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pymupdf",
    "chromadb",
    "fastembed",
    "rich",
    "platformdirs",
    "beautifulsoup4",
    "python-docx",
    "python-pptx",
    "ebooklib",
]

[project.scripts]
engram = "engram.main:run"

[project.optional-dependencies]
gpu = ["fastembed-gpu"]  # replaces fastembed; run: pip install ".[gpu]"
build = ["pyinstaller"]
test = ["pytest", "ruff"]
dev = ["bump-my-version", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "engram.__version__"}

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "src/engram/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
