[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engra"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pymupdf",
    "chromadb",
    "fastembed>=0.8.0,<0.9.0",  # 0.8.x: mean pooling for multilingual-e5-large; pin to avoid silent embedding drift
    "rich",
    "platformdirs",
    "beautifulsoup4",
    "python-docx",
    "python-pptx",
    "ebooklib",
]

[project.scripts]
engra = "engra.main:run"

[project.optional-dependencies]
gpu = ["fastembed-gpu"]  # replaces fastembed; run: pip install ".[gpu]"
mcp = ["mcp>=1.0,<2.0"]  # MCP stdio server: pip install ".[mcp]"
ai = ["anthropic>=0.40.0"]  # Claude auto-description: pip install ".[ai]"
build = ["pyinstaller"]
test = ["pytest", "ruff"]
dev = ["bump-my-version", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "engra.__version__"}

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "src/engra/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
